
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CONFIG_SECTION_GLOBAL ;
 int CONFIG_SECTION_STREAM ;
 scalar_t__ NETDATA_SSL_FORCE ;
 scalar_t__ NETDATA_SSL_INVALID_CERTIFICATE ;
 scalar_t__ NETDATA_SSL_OPTIONAL ;
 scalar_t__ NETDATA_SSL_VALID_CERTIFICATE ;
 void* appconfig_get (int *,int ,char*,char*) ;
 scalar_t__ appconfig_get_boolean (int *,int ,char*,int) ;
 int config_get_number (int ,char*,int ) ;
 int * default_rrdpush_api_key ;
 int * default_rrdpush_destination ;
 int default_rrdpush_enabled ;
 void* default_rrdpush_send_charts_matching ;
 int error (char*) ;
 int info (char*) ;
 int load_stream_conf () ;
 void* netdata_ssl_ca_file ;
 void* netdata_ssl_ca_path ;
 scalar_t__ netdata_use_ssl_on_stream ;
 scalar_t__ netdata_validate_server ;
 int rrdhost_free_orphan_time ;
 int strcmp (char*,char*) ;
 int stream_config ;
 char* strstr (int *,char*) ;

int rrdpush_init() {


    load_stream_conf();

    default_rrdpush_enabled = (unsigned int)appconfig_get_boolean(&stream_config, CONFIG_SECTION_STREAM, "enabled", default_rrdpush_enabled);
    default_rrdpush_destination = appconfig_get(&stream_config, CONFIG_SECTION_STREAM, "destination", "");
    default_rrdpush_api_key = appconfig_get(&stream_config, CONFIG_SECTION_STREAM, "api key", "");
    default_rrdpush_send_charts_matching = appconfig_get(&stream_config, CONFIG_SECTION_STREAM, "send charts matching", "*");
    rrdhost_free_orphan_time = config_get_number(CONFIG_SECTION_GLOBAL, "cleanup orphan hosts after seconds", rrdhost_free_orphan_time);

    if(default_rrdpush_enabled && (!default_rrdpush_destination || !*default_rrdpush_destination || !default_rrdpush_api_key || !*default_rrdpush_api_key)) {
        error("STREAM [send]: cannot enable sending thread - information is missing.");
        default_rrdpush_enabled = 0;
    }
    return default_rrdpush_enabled;
}
